--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,10 @@
+h1 {
+    display: flex;
+    justify-content: center;
+    background-color: blue;
+    color: aliceblue;
+}
+
 .input-group {
     display: flexbox;
     justify-content: left;
