--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@ h1 {
     justify-content: center;
     background-color: blue;
     color: aliceblue;
+    margin-bottom: 1rem;
 }
 
 .input-group {
@@ -10,7 +11,6 @@ h1 {
     justify-content: left;
     align-items: flex-start;
     padding-left: 7vw;
-    padding-bottom: 10vh;
 }
 
 #cards {
@@ -25,13 +25,14 @@ h1 {
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#145277", endColorstr="#83D0CB", GradientType=1 );
 
     width: 100%;
-    padding-top: 1vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .card {
-    padding: 1vh;
-    margin-left: 40%;
     padding: 1rem;
-    color: rgb(196, 190, 211);
+    margin: 1rem;
+    color: 0, 119, 182; 
     background-color: lightblue;
 }
