--- a/assets/style.css
+++ b/assets/style.css
@@ -41,13 +41,15 @@ ul {
     height: 80vh;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .card {
-    height: 20vh;
+    height: 60%;
+    width: 15%;
     padding: 1rem;
-    margin: 3rem;
+    margin: 1rem;
     color: 0, 119, 182; 
     background-color: lightblue;
+    overflow: auto;
 }
