--- a/assets/style.css
+++ b/assets/style.css
@@ -20,23 +20,28 @@ ul {
 }
 
 .results1 {
-     background: hsla(202, 71%, 27%, 1);
+    background-color: hsla(202, 71%, 27%, 1);
+    height: 30vh;
+    width: 100vw;
+    justify-content: space-between;
+    font-size: larger;
+    font-weight: bolder;
+}
 
-    background: linear-gradient(90deg, hsla(202, 71%, 27%, 1) 0%, hsla(176, 45%, 66%, 1) 100%);
+.icon-primary {
+    float: left;
+    margin-top: 0;
+}
 
-    background: -moz-linear-gradient(90deg, hsla(202, 71%, 27%, 1) 0%, hsla(176, 45%, 66%, 1) 100%);
-
-    background: -webkit-linear-gradient(90deg, hsla(202, 71%, 27%, 1) 0%, hsla(176, 45%, 66%, 1) 100%);
-
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#145277", endColorstr="#83D0CB", GradientType=1 );
-
-    height: 20vh;
+.ul-current {
+    float: right;
+    margin-top: 0;
 }
 
 #cards {
     background-image: url(umbrellas-small.jpg);
-    background-repeat: repeat;
-    background-size: contain;
+    /* background-repeat: repeat; */
+    background-size: cover;
     width: 100%;
     height: 80vh;
     display: flex;
@@ -44,12 +49,16 @@ ul {
     justify-content: space-evenly;
 }
 
+
+
+
 .card {
-    height: 60%;
+    height: 60vh;
     width: 15%;
-    padding: 1rem;
     margin: 1rem;
     color: 0, 119, 182; 
+    font-size: x-large;
+    font-weight: bolder;
     background-color: lightblue;
     overflow: auto;
 }
