--- a/assets/style.css
+++ b/assets/style.css
@@ -39,9 +39,9 @@ ul {
 }
 
 #cards {
-    background-image: url(umbrellas-small.jpg);
+    /* background-image: url(umbrellas-small.jpg); */
     /* background-repeat: repeat; */
-    background-size: cover;
+    background-size: contain;
     width: 100%;
     height: 80vh;
     display: flex;
