--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,6 @@ ul {
 }
 
 .results1 {
-    background-color: hsla(202, 71%, 27%, 1);
     height: 30vh;
     width: 100vw;
     justify-content: space-between;
@@ -59,6 +58,6 @@ ul {
     color: 0, 119, 182; 
     font-size: x-large;
     font-weight: bolder;
-    background-color: lightblue;
     overflow: auto;
+    border: none;
 }
